--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "clean": "rimraf dist",
     "test-watch": "tsc --noUnusedParameters --noUnusedLocals && karma start --no-single-run --auto-watch",
     "commit": "npm run prepublish && npm test && git-cz",
+    "prepublish": "ngc && npm run build",
+    "buildalt": "webpack && cp style.css bundles/style.css",
+    "watch": "ntsc -w",
     "build": "npm run clean && ngc && ng-packagr -p ng-package.json && cp style.css dist/bundles/style.css && rimraf dist/tests",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
@@ -49,7 +52,9 @@
     "@types/node": "^8.0.53",
     "awesome-typescript-loader": "^3.1.3",
     "codelyzer": "^4.0.1",
+    "commitizen": "2.8.6",
     "core-js": "^2.4.1",
+    "cz-conventional-changelog": "1.2.0",
     "istanbul-instrumenter-loader": "^3.0.0",
     "jasmine-core": "^2.6.2",
     "karma": "^1.7.0",
@@ -65,6 +70,7 @@
     "ng-packagr": "^2.0.0-rc.0",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.0",
+    "semantic-release": "4.3.5",
     "source-map-loader": "^0.2.1",
     "ts-helpers": "1.1.2",
     "tslint": "^5.4.3",
@@ -75,5 +81,10 @@
   },
   "engines": {
     "npm": ">4.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
