--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,9 @@
       "jasmine",
       "node"
     ],
-    "lib": ["es2015", "dom"]
+    "lib": ["es2015", "dom"],
+    "removeComments": true,
+    "sourceMap": true
   },
   "files": [
     "public_api.ts"
