--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
   "bugs": {
     "url": "https://github.com/akserg/ng2-dnd/issues"
   },
-  "main": "./bundles/ng2-dnd.umd.js",
-  "module": "./ng2-dnd.es5.js",
-  "typings": "./ng2-dnd.d.ts",
+  "main": "bundles/ng2-dnd.umd.js",
+  "module": "esm5/ng2-dnd.js",
+  "typings": "ng2-dnd.d.ts",
   "homepage": "https://github.com/akserg/ng2-dnd#readme",
   "peerDependencies": {
     "@angular/core": "^4.0.0 || ^5.0.0",
@@ -86,5 +86,7 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "es2015": "esm2015/ng2-dnd.js",
+  "metadata": "ng2-dnd.metadata.json"
 }
